--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -78,6 +78,7 @@ nav {
   /*opacity: 0;*/
   transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
   visibility: hidden;
+  z-index: 0;
 }
 
 ul {
@@ -89,7 +90,7 @@ ul {
   height: 100%;
   justify-content: space-evenly;
   text-align: center;
-  z-index: 10; /*Rätt?*/
+  
 
   li {
     font-family: 'Jockey One';
@@ -130,7 +131,7 @@ header {
 
   h2 {
     position: absolute;
-    margin: 0;
+    margin: 10;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -142,21 +143,21 @@ header {
 
   .drizzle {
     color: $third-color;
-    top: -6px;
+    top: -18px;
     right: 0;
-    font-size: 1.57rem;
+    font-size: 2.8rem;
   }
 
   .tahini {
     color: $secondary-color;
-    font-size: 4rem;
+    font-size: 7rem;
   }
 
   .chickpeas {
     color: $primary-color;
     left: 0;
-    bottom: -8px;
-    font-size: 1.75rem;
+    bottom: -14px;
+    font-size: 2.95rem;
     z-index: -1;
 
   }
@@ -175,7 +176,7 @@ header {
 
 
 p {
-  font-size: 1.25rem;
+  // font-size: 1.25rem;
   color: white;
   .text {
     display: flex;
@@ -188,7 +189,7 @@ p {
 .bottom {
   text-align: center;
     a {
-      font-size: 1.25rem;
+      // font-size: 1.25rem;
       font-family: 'Jockey One';
       color: white;
       text-transform: uppercase;
@@ -231,8 +232,9 @@ p {
     color: black;
     display: inline-block;
     transform: rotate(-3deg);
-    z-index: -5;
-    position: relative; /*?!*/
+    // z-index: -5;
+    // position: relative;
+    
     
 
     span {
