--- a/css/style.scss
+++ b/css/style.scss
@@ -31,8 +31,9 @@ $secondary-font: "Roboto Condensed";
   // text-align: center;
   max-width: 60ch;
   font-family: 'Jockey One';
-  font-size: 16px;
+  font-size: 25px;
   margin: 0 auto;
+  text-align: center;
 }
 
 /*.only-desktop {
