--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -127,9 +127,10 @@ h2 {
         
         padding-left: 20px;
         margin-top: 0;
-
+        border-left: 10px solid $primary-color;
         color: black;
         text-align: left;
+        font-size: 3.3rem;
 
         img {
             margin-left: 5px;
