margin + bigger menu-link mobil

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -186,6 +186,10 @@ p {
   }
 }
 
+.menu-link {
+  font-size: 25px;
+}
+
 .bottom {
   text-align: center;
     a {
@@ -214,7 +218,9 @@ p {
   }
 
 }
-
+/*Jag har valt att presentera min meny på detta sätt,
+eftersom det brukar se ut så när man tittar 
+på menyer från mobilen. Jag tycker att det blir tydligt.*/
 .menu-items {
   text-align: center;
   color: white;
