--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,7 @@ $secondary-font: "Roboto Condensed";
   max-width: 60ch;
   font-family: 'Jockey One';
   font-size: 25px;
-  margin: 0 auto;
+  margin: 10px auto;
   text-align: center;
 }
 
