--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -21,7 +21,7 @@ header {
     position: fixed; 
     height: 100vh;
     width: 95px; 
-    border-right: 8px solid $primary-color;
+    // border-right: 10px solid $primary-color;
     border-bottom: 0;
 }
 
@@ -58,6 +58,8 @@ h2 {
     min-height: 100vh;
     padding-left: 10px; /*Ev bredare?*/
     padding-right: 10px;
+    border-left: 10px solid $primary-color;
+    border-right: 10px solid $primary-color;
     .top, .bottom {
         display: grid;
         // gap: 16px; /*får upp meny */ 
@@ -148,6 +150,9 @@ h2 {
     grid-template-columns: repeat(11, 1fr);
     grid-template-rows: auto auto; /*2 rader?*/
     gap: 10px;
+    border-top: 10px solid $primary-color;
+    border-left: 10px solid $primary-color;
+    border-right: 10px solid $primary-color;
 
     .page2-images {
         grid-column: 2 / -1;
@@ -155,6 +160,7 @@ h2 {
         display: grid; 
         grid-template-columns: repeat(11, 1fr);
         width: auto; 
+        gap: 10px;
 
        
 
@@ -195,7 +201,7 @@ h2 {
             grid-column: 1 / 4;
         }
         .tags {
-            grid-column: 1 / 4;
+            grid-column: span 4;
             
         }
         .about {
