--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -202,6 +202,8 @@ h2 {
         }
         .tags {
             grid-column: span 4;
+            display: flex;
+            align-items: center;
             
         }
         .about {
@@ -213,33 +215,6 @@ h2 {
         }
     }
 
-
-    /*BEFORE*/ /*
-    .menu-items { 
-        -text-align: left; För att "bryta centrering
-        -grid-column: 2 / -1;
-        -grid-row: 2;
-        -display: grid;
-        -grid-template-columns: repeat(11, 1fr);
-        border-top: 1px solid red;
-
-        .tags, .about, .price {
-            border-bottom: 1px solid red;
-            background-color: white;
-        }
-        .tags {
-            grid-column: 1 / 4;
-        }
-        .name {
-            grid-column: 1 / 4;  
-        }
-        .about {
-            grid-column: 5 / 11;  
-        }
-        .price {
-            grid-column: 11/ 12;
-        }
-    }BEFORE END*/ 
 }
 
 .page3 {
