adjusted margins page 2

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -205,7 +205,7 @@ p {
 .page2-images {
   display: flex;
   justify-content: center;
-  // margin: 10px;
+  margin-top: 10px;
   .p2-1, .p2 {
     width: 30%;
     height: auto;
