--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -161,6 +161,7 @@ h2 {
         grid-template-columns: repeat(11, 1fr);
         width: auto; 
         gap: 10px;
+        margin-top: 0;
 
        
 
