--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -153,6 +153,7 @@ h2 {
     border-top: 10px solid $primary-color;
     border-left: 10px solid $primary-color;
     border-right: 10px solid $primary-color;
+    border-bottom: 20px solid $primary-color;
 
     .page2-images {
         grid-column: 2 / -1;
@@ -163,7 +164,6 @@ h2 {
         gap: 10px;
         margin-top: 0;
 
-       
 
         .p2-1, .p2-middle, .p2 {
             object-fit: cover;
