--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -78,7 +78,7 @@ nav {
   /*opacity: 0;*/
   transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
   visibility: hidden;
-  z-index: 0;
+  z-index: 2;
 }
 
 ul {
@@ -127,7 +127,7 @@ header {
   position: relative;
   min-width: 300px;
   min-height: 300px;
-  z-index: -1;
+  z-index: -1; /*Tahini Drizz Chick*/
 
   h2 {
     position: absolute;
