--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -341,6 +341,11 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
     }
     
   }
+
+  /*.img-p3 {
+    HÄR styling "höger sida" mobil
+  }*/
+
 }
 
 
