--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -245,20 +245,34 @@ h2 {
         background-color: salmon;
 
         .table {
-            background-image: url(/assets/img/tablesetting.jpg);
-            background-size: cover;
-            background-position: center;
+            // background-image: url(/assets/img/tablesetting.jpg);
+            // background-size: cover;
+            // background-position: center;
             // filter: blur(3px);
             height: 500px;
             width: 500px;
             position: relative;
 
+            &::before {
+                content:""; 
+                background-image: url(/assets/img/tablesetting.jpg);
+                background-size: cover;
+                background-position: center;
+                filter: blur(3px);
+                position: absolute;
+                inset: 0;
+                // top: 0;
+                // left: 0;
+                // right: 0;
+                // bottom: 0;
+            }
+
             .contact-info { /*UL*/ 
+                position: absolute;
                 top: 50%;
                 left: 50%;
                 padding: 0;
-                position: absolute;
-                transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%); /*centrerar hort+vert i förhållande till parent*/
                 list-style: none;
     
                 .contact-list { /*Li*/
