--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -343,12 +343,13 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
   }
 
   .img-p3 {
-    grid-column: span 6;
+    // grid-column: span 6;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    background-color: salmon;
+    background-color: salmon; /*BYT*/
+    border: 5px solid white;
 
     .table {
         // background-image: url(/assets/img/tablesetting.jpg);
@@ -359,19 +360,19 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
         width: 500px;
         position: relative;
 
-        &::before {
-            content:""; 
-            background-image: url(/assets/img/tablesetting.jpg);
-            background-size: cover;
-            background-position: center;
-            filter: blur(3px);
-            position: absolute;
-            inset: 0;
-            // top: 0;
-            // left: 0;
-            // right: 0;
-            // bottom: 0;
-        }
+        // &::before {
+        //     content:""; 
+        //     background-image: url(/assets/img/tablesetting.jpg);
+        //     background-size: cover;
+        //     background-position: center;
+        //     filter: blur(3px);
+        //     position: absolute;
+        //     inset: 0;
+        //     // top: 0;
+        //     // left: 0;
+        //     // right: 0;
+        //     // bottom: 0;
+        // }
 
         .contact-info { /*UL*/ 
             position: absolute;
@@ -405,7 +406,7 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
         }
     }
 
-}
+  }
 
 
 .cookies {
