adjusted colors mobile contact info nöjd

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -279,7 +279,7 @@ h2 {
 
                     a {
                         text-decoration: none;
-                        color: red;
+                        color: #2ab0dd;
                         display: flex;
                         align-items: center;
                         /*anv ikon klassnamn ist?*/
