changed icon colors mobile version

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -292,6 +292,7 @@ h2 {
     
                         .material-symbols-outlined {
                             font-size: 50px;
+                            color: #2ab0dd;
                             margin-right: 10px;
                             // filter: drop-shadow(-1px -1px 0 black);
                         }
