--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -389,6 +389,7 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
 
                     .material-symbols-outlined {
                         font-size: 60px;
+                        color: $secondary-color;
                         margin-right: 5px;
                     }
                 }
