border-left page 3 adjusted

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -287,7 +287,7 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
 }
 
 .page3 {
-  border:10px solid $secondary-color;
+  // border:10px solid $secondary-color;
   font-family: $primary-font;
   text-transform: uppercase;
   color: white;
