added border top page 3 only mobile version

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -222,6 +222,7 @@ h2 {
     background-color: #5fff37;
     color: black;
     border-left: 10px solid white;
+    border-top: none;
     min-height: 100vh;
 
     display: grid;
