--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -303,6 +303,7 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
   text-transform: uppercase;
   color: white;
   padding: 0 20px;
+  border-top: 10px solid $primary-color;
 
   .contact {
     h4 {
@@ -372,6 +373,7 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
     position: relative;
     background-color: black; 
     
+    
 
     .table {
        /*Ej bakgrundsbild i mobil/tablet pga plottrigt*/
@@ -392,10 +394,8 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
 
             .contact-list { /*Li*/
                 display: flex;
-                // justify-content: flex-start;
-                font-size: 50px; /*text ej ikon*/
+                font-size: 40px; /*text ej ikon*/
                 padding: 1rem;
-                // text-decoration: none;
                 align-items: center;
 
                 a {
