--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -127,7 +127,7 @@ header {
     //  padding: 10px 45px; /*Innan demo*/
      text-transform:uppercase;
      color: rgb(255, 255, 255);
-     font-size: clamp(1rem, 8vw, 2.5rem);
+     font-size: clamp(3rem, 8vw, 2.5rem);
      font-family: 'Jockey One';
      
    }
@@ -143,7 +143,7 @@ header {
 
   h2 {
     position: absolute;
-    margin: 10;
+    margin-top: 36px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -199,7 +199,11 @@ p {
 }
 
 .menu-link {
-  font-size: 25px;
+  font-size: 35px;
+
+  &:hover {
+    color: $primary-color;
+  }
 }
 
 .bottom {
