adjusted gaps page 2

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -221,7 +221,7 @@ p {
 .page2-images {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin: 16px 0;
   .p2-1, .p2 {
     width: 30%;
     height: auto;
