--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -41,7 +41,7 @@ h1 {
 }
 
 .text {
-    font-size: 3.4rem;
+    font-size: 3.1rem;
     display: block;
     justify-content: left;
     text-align: left;
@@ -122,7 +122,7 @@ h1 {
             grid-column: span 6;
             border-left: 10px solid $primary-color;
             padding-left: 10px;
-            font-size: 3.3rem;
+            font-size: 3rem;
             margin: 0; /*?*/
             display: inline;
         }
@@ -130,12 +130,12 @@ h1 {
         grid-column: 6 / span 6;
         display: block;
         
-        padding-left: 20px;
+        padding-left: 10px;
         margin-top: 0;
         border-left: 10px solid $primary-color;
         color: black;
         text-align: left;
-        font-size: 3.3rem;
+        font-size: 3rem;
 
         img {
             margin-left: 5px;
@@ -153,10 +153,12 @@ h1 {
     grid-template-columns: repeat(11, 1fr);
     grid-template-rows: auto auto; /*2 rader?*/
     gap: 16px;
+    // border: 10px 10px 20px 10px solid $primary-color;
     border-top: 10px solid $primary-color;
     border-left: 10px solid $primary-color;
     border-right: 10px solid $primary-color;
     border-bottom: 20px solid $primary-color;
+    
 
     .page2-images {
         grid-column: 2 / -1;
