added letter spacing h1 mobile

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -31,6 +31,7 @@ h1 {
     text-orientation: upright;
     display: block; /*säger i FL anv. position:fixed, då ej ny rad*/
     margin-top: 30px;
+    letter-spacing: normal;
     }
 }
 
