--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -127,8 +127,9 @@ header {
     //  padding: 10px 45px; /*Innan demo*/
      text-transform:uppercase;
      color: rgb(255, 255, 255);
-     font-size: clamp(1rem, 8vw, 2.5rem);
+     font-size: clamp(2.4rem, 8vw, 2.5rem);
      font-family: 'Jockey One';
+     letter-spacing: 4px;
      
    }
 }
