hover effect hambuerger-menu

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -26,12 +26,15 @@ button {
     background-color: rgb(255, 242, 54); /*Enligt brief*/
     border-radius: 6px;
     margin-bottom: 4px;
+    // transition: transform 0.3s ease-in;
+
   }
+  
 
 }
 
 /*TESTAR */
-/*Tog bort input, nu klass!*/
+
 .hamburger {
   position: fixed;
   top: 20px;
@@ -40,6 +43,15 @@ button {
   width: 35px;
   height: 35px;
   opacity: 0;
+  
+}
+
+input:hover + .menu button {
+  :nth-child(1), 
+  :nth-child(2),
+  :nth-child(3) {
+    transform: translateX(5px);
+  }
 }
 
 input:checked {
