adjusted menu items view mobile vs desktop

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -304,13 +304,14 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
   .about {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.45rem;
+    margin: 5px;
   }
 
   .price {
     display: block;
     font-family: 'Jockey One';
     font-size: 2rem;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
   }
 }
 
