--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -203,6 +203,7 @@ h1 {
         border-top: 2px solid black;
         border-bottom: 2px solid black;
         margin: 10px 0;
+        padding: 10px;
 
         .name {
             grid-column: 1 / 4;
