ändrad sökväg till bakgrundsbild table

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -268,7 +268,7 @@ h1 {
 
             &::before {
                 content:""; 
-                background-image: url(/assets/img/tablesetting.jpg);
+                background-image: url("../assets/img/tablesetting.jpg");
                 background-size: cover;
                 background-position: center;
                 filter: blur(3px);
