--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -232,6 +232,7 @@ h1 {
     color: black;
     border-left: 10px solid white;
     border-top: none;
+    padding: 0 10px;
     min-height: 100vh;
 
     display: grid;
