--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -445,8 +445,33 @@ på menyer från mobilen. Jag tycker att det blir tydligt.*/
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-inline: 8px;
-    padding-block: 16px;
+    padding-inline: 100px;
+    padding-block: 10px;
+    padding-left: 120px;
+    
+    p {
+      font-family: $secondary-font, sans-serif;
+      font-size: 25px;
+    }
+
+    .decline-button,
+    .accept-button {
+      font-family: $primary-font;
+      text-transform: uppercase;
+      font-size: 1.7rem;
+      padding: 0 40px;
+      border: none;
+      border-radius: 20px;
+      
+    }
+    .decline-button {
+      background-color: $primary-color;
+      margin-right: 10px;
+    }
+    
+    .accept-button {
+      background-color: $secondary-color;
+    }
 
 
   }
