cookies mobile + tablet

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -313,8 +313,25 @@ h1 {
         }
 
     }
-    
+      
+}
 
+.cookies {
+    padding-inline: 100px;
+    padding-block: 10px;
+    padding-left: 120px;
 
-   
+    p {
+        font-size: 1.6rem;
+    }
+
+    .decline-button, 
+    .accept-button {
+        font-size: clamp(1.45rem, 8vw, 1.5rem);
+        padding: 5px 45px;
+    }
+    .decline-button {
+        
+        margin-right: 5px;
+      }
 }
